MDEV-6153 Trivial Lintian errors in MariaDB sources: spelling errors and wrong executable bits

--- a/man/mysql-test-run.pl.1
+++ b/man/mysql-test-run.pl.1
@@ -332,7 +332,7 @@ is defined so that
 can invoke itself with
 exec $MYSQL_TEST\&.
 .PP
-Other tests may refer to the last three variables listed in the preceeding table, to locate files to read or write\&. For example, tests that need to create files will typically put them in
+Other tests may refer to the last three variables listed in the preceding table, to locate files to read or write\&. For example, tests that need to create files will typically put them in
 $MYSQL_TMP_DIR/\fIfile_name\fR\&.
 .PP
 If you are running
