--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mariadb-10.1 (10.1.0) unstable; urgency=low
+
+  * Initial release.
+
+ -- Sergei Golubchik <serg@askmonty.org>  Fri, 23 May 2014 09:44:38 -0200
+
 mariadb-10.0 (10.0.0) unstable; urgency=low
 
   * Initial release.
